--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --color-grey-ultralight: #f9f9f9;
+    --color-grey-light: #f4f4f4;
+    --color-grey-medium: #f0f0f0;
+    --color-grey-dark: #d9d9d9;
+    --color-grey-ultradark: #747474;
+    --color-black: #0d0d0d;
+    --solid-red: #ED4264;
+
+    font-size: 20px;
+}
+
+* {
+    font-family: "Roboto", sans-serif;
+    color:  var(--color-black);
+    text-decoration: none;
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+}
+
+
+h1 {
+    text-align: center;
+}
