--- a/src/app/components/menu-button/menu-button.component.css
+++ b/src/app/components/menu-button/menu-button.component.css
@@ -1,9 +1,11 @@
 .menu-button {
-    background-color: green;
-    padding: 10px;
+    background-color: white;
+    border: 0;
     border-radius: 10px;
+    padding: 11px;
+    cursor: pointer;
 }
 
 .menu-button:hover {
-    background-color: red;
+    background-color: var(--color-grey-dark);
 }
