--- a/src/app/components/small-button/small-button.component.html
+++ b/src/app/components/small-button/small-button.component.html
@@ -1,7 +1,3 @@
-<button
-  class="small-button"
-  [style.background]="backgroundColor"
-  [style.color]="color"
->
+<button class="small-button" [ngClass]="style">
   <ng-content></ng-content>
 </button>
