--- a/src/app/layouts/main/main.component.css
+++ b/src/app/layouts/main/main.component.css
@@ -1,10 +1,6 @@
 main {
-    position: fixed;
-    flex: 1;
-    align-items: flex-end;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 100%;
-    bottom:0;
-    margin-bottom: 50vh;
 }
