--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,11 @@
-<h1>What can I help with?</h1>
-<app-message-bar />
-<app-suggestions />
+<div id="home">
+  <div id="title">
+    <h1>What can I help with?</h1>
+  </div>
+  <app-message-bar />
+  <app-suggestions (selectedSuggestion)="onSuggestionSelected($event)" />
+  <span>
+    By messaging ChatGPT, you agree to our <a href="/">Terms</a> and have read
+    our<a href="/"> Privacy Policy</a>.
+  </span>
+</div>
