--- a/src/app/components/message-bar/message-bar.component.html
+++ b/src/app/components/message-bar/message-bar.component.html
@@ -6,6 +6,7 @@
       id="message-input"
       [(ngModel)]="text"
       (input)="resizeTextArea($event)"
+      (keydown)="handleKeydown($event)"
       rows="1"
       placeholder="Message ChatGPT"
     ></textarea>
