--- a/src/app/components/suggestions/suggestions.component.html
+++ b/src/app/components/suggestions/suggestions.component.html
@@ -1,6 +1,6 @@
 <div class="suggestions-buttons">
   <app-large-button
-    *ngFor="let button of suggestions"
+    *ngFor="let button of getSuggestions()"
     [icon]="button.icon"
     [label]="button.label"
     [onClick]="button.onClick"
@@ -8,10 +8,10 @@
 </div>
 
 <div class="suggestions-grid">
-  <div *ngFor="let button of suggestions.slice(0, 4)" class="small-suggestion">
-    <div (click)="button.onClick()">
-      <h4>{{ button.label }}</h4>
-      <p>{{ button.label }}</p>
-    </div>
-  </div>
+  <app-clickable-card
+    *ngFor="let card of randomTasks"
+    [label]="card.label"
+    [text]="card.text"
+    [onClick]="card.onClick"
+  />
 </div>
