--- a/src/app/components/large-button/large-button.component.css
+++ b/src/app/components/large-button/large-button.component.css
@@ -8,7 +8,7 @@
     align-items: center;
     display: flex;
     color: var(--color-grey-ultradark);
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: 400;
 }
 
@@ -39,6 +39,13 @@
 .code {
     background-image: url('../../../assets/images/icon_0004.png');
 }
+
 .summerize {
     background-image: url('../../../assets/images/icon_0005.png');
+}
+
+.none {
+    width: 0;
+    height: 0;
+    margin: 0;
 }
