--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -15,6 +15,7 @@ header {
 
 #auth {
     display: flex;
+    align-items: center;
     gap: 12px;
 }
 
@@ -27,7 +28,7 @@ header {
     p {
         color: var(--color-grey-ultradark);
         font-weight: 700;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         height: 18px;
     }
     #arrow-down {
@@ -50,11 +51,11 @@ header {
     background-size: contain; 
     background-repeat: no-repeat; 
     border: 0;
-    width: 18px;
-    height: 18px;
+    width: 19px;
+    height: 19px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     #llm-button {
         position: absolute;
         left: 50%;
