--- a/src/app/pages/chat/chat.component.css
+++ b/src/app/pages/chat/chat.component.css
@@ -4,7 +4,6 @@
     justify-content: flex-end;
     height: 100vh;
     gap: 12px;
-    padding: 12px;
 }
 
 #chat-window {
@@ -20,23 +19,27 @@
 .message {
     width: 100%;
     display: flex;
-    align-items: center;
-    padding: 12px 18px;
+    align-items: flex-start;
+    padding: 26px 0;
+    font-size: 1.1rem;
     
-    p {
+    pre {
         justify-content: flex-end;
-        border-radius: 26px;
-        padding: 14px 18px;
+        border-radius: 23px;
         width: fit-content;
         justify-self: right;
+        text-wrap: wrap;
     }
 
     .user {
         background-color: var(--color-grey-medium);
+        max-width: 70%;
+        padding: 12px 26px 12px 18px;
         margin-left: auto;
     }
 
     .bot {
+        padding: 8px 22px;
         background-color: transparent;
         margin-right: auto;
     }
@@ -54,7 +57,6 @@
 
 }
 
-
 #chat-message-bar {
     bottom: 0;
     padding-bottom: 50px;
@@ -67,4 +69,8 @@ span{
     font-size: 0.8rem;
     font-weight: 400;
     color: var(--color-grey-ultradark);
+}
+
+header {
+    display: none;
 }
