--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@
     --color-grey-dark: #d9d9d9;
     --color-grey-ultradark: #747474;
     --color-black: #0d0d0d;
-    --solid-red: #ED4264;
+
+    font-size: 11pt;
 }
 
 * {
