--- a/src/app/pages/chat/chat.component.css
+++ b/src/app/pages/chat/chat.component.css
@@ -16,6 +16,11 @@
     overflow-y: auto; 
     scrollbar-color: transparent transparent;
 }
+
+span {
+    font-size: 0.9rem;
+}
+
 .message {
     width: 100%;
     display: flex;
@@ -38,7 +43,7 @@
         margin-left: auto;
     }
 
-    .bot {
+    .assistant {
         padding: 8px 22px;
         background-color: transparent;
         margin-right: auto;
@@ -60,15 +65,6 @@
 #chat-message-bar {
     bottom: 0;
     padding-bottom: 50px;
-}
-
-span{
-    text-align: center;
-    width: 100%;
-    bottom: 0;
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: var(--color-grey-ultradark);
 }
 
 header {
