--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,19 @@
     margin: 0px;
 }
 
+span{
+    text-align: center;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--color-grey-ultradark);
+    padding-bottom: 8px;
+}
+
+a {
+    text-decoration: underline;
+}
+
 .light-button {
     background-color: transparent;
     border: 1px solid var(--color-grey-dark);
