--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -5,7 +5,7 @@
     </app-menu-button>
     <app-menu-button id="llm-button">
       <div class="llm-model">
-        <p>ChatGPT 4o mini</p>
+        <h1>ChatGPT 4o mini</h1>
         <div id="arrow-down"></div>
       </div>
     </app-menu-button>
