--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -21,16 +21,10 @@ header {
 
 .llm-model {
     display: flex;
-    align-items: end;
+    align-items: center;
     gap: 5px;
     background-color: transparent;
     
-    p {
-        color: var(--color-grey-ultradark);
-        font-weight: 700;
-        font-size: 1.3rem;
-        height: 18px;
-    }
     #arrow-down {
         background-color: transparent;
         background-image: url('../../../assets/images/arrow_menu.png');
@@ -40,7 +34,6 @@ header {
         border: 0;
         width: 12px;
         height: 8px;
-        margin-bottom: 2px;
         cursor: pointer;
     }
 }
