--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,25 +4,19 @@
     justify-content: flex-end;
     gap: 28px;
 }
+
 #title {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-}
 
-.marker-dot {
-    height: 1.5em;
-    width: 1.5em;
-    background-color: black; 
-    border-radius: 100%;
-    aspect-ratio: 1;
-}
-
-h1 {
-    font-size: 2rem;
-    text-align: center;
-    font-weight: 600;
+    .marker-dot {
+        height: 1.5em;
+        width: 1.5em;
+        background-color: black; 
+        border-radius: 100%;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -39,14 +33,15 @@ h1 {
         background-repeat: no-repeat;
         margin-right: auto;
         margin-left: auto;
-        margin-bottom: 36vh;
+        margin-bottom: 35vh;
 
-        h1 {
+        .welcome-message {
             display: none;
         }
-    }
-    .marker-dot {
-        display: none;
+
+        .marker-dot {
+            display: none;
+        }
     }
 
     app-message-bar {
