added mock to Message roles

--- a/src/app/pages/chat/chat.component.css
+++ b/src/app/pages/chat/chat.component.css
@@ -43,7 +43,7 @@ span {
         margin-left: auto;
     }
 
-    .assistant {
+    .assistant, .mock{
         padding: 8px 22px;
         background-color: transparent;
         margin-right: auto;
