--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,33 @@
+#app {
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+}
+
 #content {
     display: flex;
-    justify-content: center;
-    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-height: 100vh;
+}
+
+#content.shrink {
+    width: calc(100vw - 260px);
 }
 
 app-main {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
     max-width: 792px;
-    height: 100vh;
+    max-height: calc(100vh - 65px);
     padding: 12px;
+}
+
+app-header {
+    width: 100%;
+    height: 65px;
 }
