--- a/src/app/components/menu-button/menu-button.component.css
+++ b/src/app/components/menu-button/menu-button.component.css
@@ -3,6 +3,8 @@
     border: 0;
     border-radius: 10px;
     padding: 11px;
+    overflow: hidden;
+    white-space: nowrap;
     cursor: pointer;
 }
 
