--- a/src/app/components/menu-button/menu-button.component.html
+++ b/src/app/components/menu-button/menu-button.component.html
@@ -1,3 +1,3 @@
-<button class="menu-button">
+<button class="menu-button" [style.width]="width ? width : 'auto'">
   <ng-content></ng-content>
 </button>
