--- a/src/app/pages/chat/chat.component.css
+++ b/src/app/pages/chat/chat.component.css
@@ -1,8 +1,7 @@
 #chat {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    height: 100vh;
+    height: 100%;
     gap: 12px;
 }
 
@@ -11,9 +10,8 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-    height: 100%;
-    padding-top: 70px;
     overflow-y: auto; 
+    overflow-x: hidden;
     scrollbar-color: transparent transparent;
 }
 
