--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,8 @@
 #home {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
+    height: 100%;
     gap: 28px;
 }
 
